# flow_control_service

./: AGENTS.md  main.py  pyproject.toml  pyrightconfig.json
scripts/: run_detection_scenario.py
src/flow_control/: __init__.py
src/flow_control/detection/: __init__.py  api.py  config.py  cooldown.py  detector.py  diagnostics.py  events.py  history.py  observations.py  retrigger.py  snapshot.py  state.py  triggers.py  warmup.py
src/flow_control/domain/: __init__.py  enums.py  graph.py  history.py  observations.py  references.py
src/flow_control/forecasting/: __init__.py  config.py  demand.py  forecaster.py  od.py  sensitivity.py  validation.py
src/flow_control/models/: __init__.py  config.py  detection_state.py  detour.py  diagnostics.py  enums.py  events.py  forecast.py  graph.py  history.py  observations.py  optimization.py  reference.py  target_key.py  tenant.py
src/flow_control/optimization/: __init__.py  api.py  arc_index.py  fallback.py  model_builder.py  result_builder.py  solver.py
tests/: conftest.py
tests/detection/: test_cooldown.py  test_cooldown_queue.py  test_danger_flag_down.py  test_detect.py  test_diagnostics.py  test_events.py  test_high_stagnation_trigger.py  test_manual_trigger.py  test_retrigger.py  test_scheduled.py  test_surge_trigger.py  test_triggers_high_stagnation.py  test_triggers_surge.py  test_warmup.py
tests/forecasting/: test_demand.py  test_forecast.py  test_gravity.py  test_od.py  test_sensitivity.py  test_validation.py
tests/optimization/: test_arc_index.py  test_determinism.py  test_direction_proposal.py  test_fallback.py  test_models.py  test_optimize_happy_path.py  test_throughput_phase2.py
