[project]
name = "flow-control-service"
version = "0.1.0"
description = "Flow control optimization service (Detection module PoC)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "linopy>=0.3.13",
    "highspy>=1.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flow_control"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
